--- a/packages/apps/shell/public/index.html
+++ b/packages/apps/shell/public/index.html
@@ -5,10 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>React App</title>
     <meta name="importmap-type" content="systemjs-importmap" />
+    <script
+      type="systemjs-importmap"
+      src="https://storage.googleapis.com/react.microfrontends.app/importmap.json"
+    ></script>
+
     <script type="systemjs-importmap">
       {
         "imports": {
-          "single-spa": "https://cdn.jsdelivr.net/npm/single-spa@5.9.0/lib/system/single-spa.min.js"
+          "@jc/app1": "//localhost:8080/jc-app1.js",
+          "@jc/app2": "//localhost:8081/jc-app2.js",
+          "@jc/app3": "//localhost:4001/main.js",
+          "@jc/app4": "//localhost:4002/main.js"
         }
       }
     </script>
@@ -20,10 +28,14 @@
 
     <script src="https://cdn.jsdelivr.net/npm/systemjs@6.8.3/dist/system.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/systemjs@6.8.3/dist/extras/amd.min.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/systemjs@6.8.3/dist/extras/named-exports.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/zone.js@0.11.3/dist/zone.min.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/systemjs@6.8.3/dist/extras/named-register.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/import-map-overrides/dist/import-map-overrides.js"></script> -->
+
+    <script src="https://unpkg.com/zone.js@0.11.1/bundles/zone.umd.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/systemjs@6.8.3/dist/extras/named-register.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/import-map-overrides/dist/import-map-overrides.js"></script>
+
+    <!-- Estilos -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -32,7 +44,6 @@
     />
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
