--- a/packages/apps/shell/index.html
+++ b/packages/apps/shell/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>React App</title>
-    <meta name="importmap-type" content="systemjs-importmap" />
     <script
       type="systemjs-importmap"
       src="https://storage.googleapis.com/react.microfrontends.app/importmap.json"
     ></script>
 
+    <!-- Child applications -->
     <script type="systemjs-importmap">
       {
         "imports": {
@@ -24,11 +24,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/systemjs@6.8.3/dist/system.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/systemjs@6.8.3/dist/extras/amd.min.js"></script>
-
     <script src="https://cdn.jsdelivr.net/npm/systemjs@6.8.3/dist/extras/named-exports.min.js"></script>
-
-    <script src="https://cdn.jsdelivr.net/npm/systemjs@6.8.3/dist/extras/named-register.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/import-map-overrides/dist/import-map-overrides.js"></script>
 
     <!-- Estilos -->
     <link
